# Melanin

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  configure  configure.ac
build_msvc/: bitcoin_config.h  common.init.vcxproj
contrib/: README.md  install_db4.sh
depends/: README.md  description.md
doc/man/: Makefile.am  Makefile.in  melanin-cli.1  melanin-qt.1  melanin-tx.1  melanin-wallet.1  melanind.1
doc3/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-melanin.md  release-process.md  tor.md  zmq.md
github/: ISSUE_TEMPLATE.md
share/: setup.nsi.in
src5b/: README.md
src7d/: bitcoin-qt-res.rc
src7e/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinunits.cpp
src7f/: README.md  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  paymentserver.cpp  sendcoinsdialog.cpp  utilitydialog.cpp
src9d/: README.md  amount_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  main.cpp  pow_tests.cpp  scriptnum10.h
src9i/: amount.h  banman.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  coins.h  (+5 more)
(+249 files in other folders)
